# ssh-relay

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
design/: RELAY-开发方案.md  ssh-manager.jsx
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: forward.rs  host_probe.rs  ipc.rs  lib.rs  main.rs  monitor.rs  pty.rs  sftp.rs  ssh_config.rs  vault.rs
src-tauri/src/ssh/: agent.rs  auth.rs  jump.rs  known_hosts.rs  mod.rs  proxy.rs  session.rs  transport.rs
src/lib/: agentStatus.js  agentStatus.test.js  appShortcuts.js  appShortcuts.test.js  appearanceStore.js  appearanceStore.test.js  chainEditor.js  chainEditor.test.js  commandHistory.js  commandHistory.test.js  configSync.js  configSync.test.js  connectionErrors.js  connectionErrors.test.js  connectionPath.js  connectionPath.test.js  credentialDisplay.js  credentialDisplay.test.js  credentialUsage.js  credentialUsage.test.js  dangerCommands.js  dangerCommands.test.js  fileTree.js  fileTree.test.js  forwardRules.js  forwardRules.test.js  hostActions.js  hostActions.test.js  hostGroups.js  hostGroups.test.js  hostKeyTrust.js  hostKeyTrust.test.js  hostProbeResults.js  hostProbeResults.test.js  hostStore.js  hostStore.test.js  hostTags.js  hostTags.test.js  hosts.js  hosts.test.js  (+66 more)
