[package]
name = "relay"
version = "0.1.3"
description = "RELAY SSH desktop manager"
authors = ["RELAY contributors"]
edition = "2021"

[lib]
name = "relay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
data-encoding = "2"
hmac = "0.12"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
parking_lot = "0.12"
portable-pty = "0.9"
russh = "0.61.2"
russh-keys = "0.49.2"
russh-sftp = "2.1.0"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
